# physics-simulator

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: headless-tests.yml
assets/fonts/: README.md
assets/textures/concrete/: README.md
assets/textures/environment/: README.md
cmake/: CompileShaders.cmake  Dependencies.cmake
config/: vulkan-sdk-sha256.txt  vulkan-sdk-version.txt
docs/: DRONE_PHYSICS_ENGINE_SPEC.md  ORIGINAL_ARCHITECTURE_SPEC.md
docs/media/: README.md
include/uaview/app/: StudioApplication.hpp
include/uaview/physics/: Drone.hpp  Environment.hpp  Math.hpp  RigidBody.hpp  World.hpp
include/uaview/render/: Camera.hpp  VulkanRenderer.hpp
scripts/: bootstrap.ps1  build.ps1  run.ps1  verify.ps1
shaders/: debug_lines.vert  ground.frag  ground.vert  shadow.vert  skybox.frag  skybox.vert
src/: main.cpp
src/app/: StudioApplication.cpp
src/physics/: Drone.cpp  Environment.cpp  RigidBody.cpp  World.cpp
src/render/: Camera.cpp  VulkanRenderer.cpp
tests/: CameraTests.cpp  CornerImpactTests.cpp  DroneDynamicsTests.cpp  GyroscopicRotorTests.cpp  MassPropertiesTests.cpp  PhysicsTests.cpp  RotationalDynamicsTests.cpp
